--- a/components.json
+++ b/components.json
@@ -12,11 +12,11 @@
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "features/components",
-    "utils": "features/lib/utils",
-    "ui": "features/components/ui",
-    "lib": "features/lib",
-    "hooks": "features/hooks"
+    "components": "@/shared/components",
+    "utils": "@/shared/lib/utils",
+    "ui": "@/shared/components/ui",
+    "lib": "@/shared/lib",
+    "hooks": "@/shared/hooks"
   },
   "registries": {}
 }
