--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
@@ -32,6 +34,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
+    "xlsx": "file:vendor/xlsx-0.20.3.tgz",
     "zod": "^4.1.12"
   },
   "devDependencies": {
