--- a/components.json
+++ b/components.json
@@ -13,9 +13,8 @@
   "iconLibrary": "lucide",
   "aliases": {
     "components": "@/shared/components",
-    "utils": "@/shared/lib/utils",
+    "utils": "@/shared/utils",
     "ui": "@/shared/components/ui",
-    "lib": "@/shared/lib",
     "hooks": "@/shared/hooks"
   },
   "registries": {}
