--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "biome check",
     "format": "biome format --write"
   },
+  "overrides": {
+    "react-is": "19.1.0"
+  },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -31,6 +34,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-redux": "^9.2.0",
+    "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
